--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <body>
 
-    <h1>Gillian Golson: Personal Trainer, Yoga Techer.</h1>
+    <h1>Gillian Golson: Personal Trainer, Yoga Teacher.</h1>
 
 </body>
 
