--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html>
 
 <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <h1>Gillian Golson: Personal Trainer, Yoga Teacher.</h1>
+    <img src="logo.jpg" alt="Logo for Gillian Golson, Personal Trainer.">
 
 </body>
 
